@@ -1,3 +1,10 @@
+2014-10-17  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Rest/Runs.pm, perl/Amanda/CheckDump.pm,
+	  perl/Amanda/Device.swg, perl/Amanda/Cleanup.pm,
+	  perl/Amanda/Changer/diskflat.pm, perl/Amanda/Changer.pm,
+	  perl/Amanda/Vault.pm, perl/Amanda/Index.pm,
+	  perl/Amanda/Disklist.swg: Add severity to messages.
+
 2014-10-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Status.pm: Set write_size, and $dle->{'dsize'}.
 
